[package]
authors = [
  "Flavio Castelli <fcastelli@suse.com>",
  "Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.de>",
]
description = "Kubewarden Policy SDK for the Rust language"
documentation = "https://docs.rs/kubewarden-policy-sdk"
edition = "2024"
license = "Apache-2.0"
name = "kubewarden-policy-sdk"
repository = "https://github.com/kubewarden/policy-sdk-rust"
version = "0.17.2"

[features]
cluster-context = ["k8s-openapi"]
crd             = ["k8s-openapi-derive", "k8s-openapi/schemars", "schemars"]
default         = ["cluster-context"]

[package.metadata.docs.rs]
features = ["cluster-context", "crd", "k8s-openapi/v1_36"]

[dependencies]
cfg-if    = "1.0"
thiserror = "2.0"
# Starting from k8s-openapi v0.14, it is NOT recommended to be explicit about
# the kubernetes features to be used when building a library. That's because
# the final version of the k8s API to be supported must be made by the consumer
# of the library.
#
# Otherwise it's possible to end up in situations like:
# * kubewarden-policy-sdk enables the `v1_22` feature of k8s-openapi
# * `consumer-foo` requires k8s-openapi too but enables the `v1_23` feature
# A build error is then raised by cargo because the same version must be picked
# by all the crates making use of k8s-openapi.
#
# Because of that, no feature is chosen here. The concrete Kubernetes version is
# selected by the consumer of the library, or — for this crate's own
# build/check/doc/test — via the `K8S_OPENAPI_ENABLED_VERSION` environment
# variable (set by the Makefile, CI, and `.envrc`).
chrono             = { version = "0.4", default-features = false }
hex                = "0.4"
k8s-openapi        = { version = "0.28.0", default-features = false, optional = true }
k8s-openapi-derive = { version = "0.28.0", optional = true }
num                = "0.4"
num-derive         = "0.4"
num-traits         = "0.2"
oci-spec           = "0.10"
schemars           = { version = "1.0", optional = true }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_yaml         = "0.9.34"
slog               = "2.7"
url                = { version = "2.5", features = ["serde"] }
wapc-guest         = "1.2"

[dev-dependencies]
assert-json-diff = "2.0.2"
jsonpath_lib = "0.3.0"
mockall = "0.14"
serial_test = "3.2"
